--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.1",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.2.0",
     "mongoose": "^7.6.3",
-    "updates": "^15.0.4"
+    "updates": "^15.0.4",
+    "validator": "^13.11.0"
   }
 }
