--- a/backend/package.json
+++ b/backend/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
-    "express": "^4.18.1",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.2.0",
     "mongoose": "^7.6.3",
+    "nodemailer": "^6.9.9",
+    "react-icons": "^5.0.1",
     "updates": "^15.0.4",
     "validator": "^13.11.0"
   }
