--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "dependencies": {
+    "axios": "^1.6.7",
+    "cors": "^2.8.5",
     "nodemailer": "^6.9.9",
+    "query-string": "^9.0.0",
     "react-datepicker": "^4.21.0",
     "react-icons": "^5.0.1"
   },
   "scripts": {
-    "install": "npm install --save-dev concurrently && npm install --save-dev @babel/plugin-proposal-private-property-in-object && npm install query-string && npm install axios && npm run install-frontend && npm run install-backend",
+    "install": "npm install --save-dev concurrently && npm install --save-dev @babel/plugin-proposal-private-property-in-object && npm install cors && npm install query-string && npm install axios && npm run install-frontend && npm run install-backend",
     "start": "concurrently \"npm run start-frontend\" \"npm run start-backend\"",
     "start-frontend": "cd frontend && npm start",
     "start-backend": "cd backend && npm run dev",
