--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
     "axios": "^1.6.7",
-    "cors": "^2.8.5",
+    "moment-timezone": "^0.5.45",
     "nodemailer": "^6.9.9",
     "query-string": "^9.0.0",
     "react-datepicker": "^4.21.0",
