--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
     "nodemailer": "^6.9.9",
     "query-string": "^9.0.0",
     "react-datepicker": "^4.21.0",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "validator": "^13.7.0"
   },
   "scripts": {
     "install": "npm install --save-dev concurrently && npm run install-libs && npm run install-frontend && npm run install-backend",
     "start": "concurrently \"npm run start-frontend\" \"npm run start-backend\"",
     "start-frontend": "cd frontend && npm start",
     "start-backend": "cd backend && npm run dev",
-    "install-backend": "cd backend && npm install && npm install express && npm install nodemailer && npm install dotenv && npm install cors",
+    "install-backend": "cd backend && npm install && npm install express && npm install nodemailer && npm install dotenv && npm install cors && npm install validator",
     "install-frontend": "cd frontend && npm install && npm install react-icons --save",
     "install-libs": "npm install --save-dev @babel/plugin-proposal-private-property-in-object && npm install cors && npm install query-string && npm install axios && npm install moment-timezone"
   },
