--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "start": "concurrently \"npm run start-frontend\" \"npm run start-backend\"",
     "start-frontend": "cd frontend && npm start",
     "start-backend": "cd backend && npm run dev",
-    "install-backend": "cd backend && npm install && npm install express && npm install nodemailer && npm install dotenv && npm install cors && npm install validator",
+    "install-backend": "cd backend && npm install && npm install express && npm install nodemailer && npm install dotenv && npm install cors && npm install validator && npm install node-cron",
     "install-frontend": "cd frontend && npm install && npm install react-icons --save",
     "install-libs": "npm install --save-dev @babel/plugin-proposal-private-property-in-object && npm install cors && npm install query-string && npm install axios && npm install moment-timezone"
   },
