--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "axios": "^1.6.8",
+    "chromedriver": "^123.0.4",
     "cors": "^2.8.5",
     "moment-timezone": "^0.5.45",
     "node-cron": "^3.0.3",
@@ -9,6 +10,7 @@
     "query-string": "^9.0.0",
     "react-datepicker": "^4.21.0",
     "react-icons": "^5.0.1",
+    "selenium-webdriver": "^4.19.0",
     "validator": "^13.11.0"
   },
   "scripts": {
