--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "axios": "^1.6.8",
     "chromedriver": "^123.0.4",
     "cors": "^2.8.5",
+    "js-tokens": "^9.0.0",
     "moment-timezone": "^0.5.45",
     "node-cron": "^3.0.3",
     "node-fetch": "^2.7.0",
