--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "query-string": "^9.0.0",
     "react-datepicker": "^4.21.0",
     "react-icons": "^5.0.1",
-    "selenium-webdriver": "^4.19.0",
     "validator": "^13.11.0"
   },
   "scripts": {
@@ -30,6 +29,7 @@
     "concurrently": "^8.2.2",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0"
+    "jest-environment-jsdom": "^29.7.0",
+    "selenium-webdriver": "^4.20.0"
   }
 }
