--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "chromedriver": "^124.0.1",
     "express": "^4.18.2",
     "react": "^18.2.0",
     "react-big-calendar": "^1.8.7",
@@ -42,6 +43,7 @@
     ]
   },
   "devDependencies": {
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "selenium-webdriver": "^4.20.0"
   }
 }
