--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
     "axios": "^1.6.8",
-    "chromedriver": "^123.0.4",
+    "chromedriver": "^124.0.1",
     "cors": "^2.8.5",
     "moment-timezone": "^0.5.45",
     "node-cron": "^3.0.3",
@@ -10,7 +10,7 @@
     "query-string": "^9.0.0",
     "react-datepicker": "^4.21.0",
     "react-icons": "^5.0.1",
-    "selenium-webdriver": "^4.19.0",
+    "selenium": "^2.20.0",
     "validator": "^13.11.0"
   },
   "scripts": {
@@ -25,11 +25,14 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@babel/preset-env": "^7.24.4",
+    "@babel/preset-env": "^7.24.5",
     "@babel/preset-react": "^7.24.1",
+    "@testing-library/jest-dom": "^6.4.2",
     "concurrently": "^8.2.2",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0"
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-fetch-mock": "^3.0.3",
+    "selenium-webdriver": "^4.20.0"
   }
 }
